exports[`test Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
`;

exports[`test Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
`;

exports[`test Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
`;
